
PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4479: Pig script with union within nested splits followed by join failed on Tez (rohini)

PIG-4457: Error is thrown by JobStats.getOutputSize() when storing to a MySql table (rohini)

PIG-4475: Keys in AvroMapWrapper are not proper Pig types (rdsr via daijy)

PIG-4478: TestCSVExcelStorage fails with jdk8 (rohini)

PIG-4474: Increasing intermediate parallelism has issue with default parallelism (rohini)

PIG-4465: Pig streaming ship fails for relative paths on Tez (rohini)

PIG-4461: Use benchmarks for Windows Pig e2e tests (nmaheshwari via daijy)

PIG-4463: AvroMapWrapper still leaks Avro data types and AvroStorageDataConversionUtilities do not handle
 Pig maps (rdsr via daijy)

PIG-4460: TestBuiltIn testValueListOutputSchemaComplexType and testValueSetOutputSchemaComplexType tests
 create bags whose inner schema is not a tuple (erwaman via daijy)

PIG-4448: AvroMapWrapper leaks Avro data types when the map values are complex avro records (rdsr via daijy)

PIG-4453: Remove test-tez-local target (daijy)

PIG-4443: Write inputsplits in Tez to disk if the size is huge and option to compress pig input splits (rohini)

PIG-4447: Pig Cannot handle nullable values (arrays and records) in avro records (rdsr via daijy)

PIG-4444: Fix unit test failure TestTezAutoParallelism (daijy)

PIG-4445: VALUELIST and VALUESET outputSchema does not match actual schema of data returned when map value schema
 is complex (erwaman via daijy)

PIG-4442: Eliminate redundant RPC call to get file information in HPath (cnauroth via daijy)
