@@ -59,7 +59,6 @@ jdeb.version=0.8
 jdiff.version=1.0.9
 jettison.version=1.3.4
 jetty.version=6.1.26
-jetty-util.version=6.1.26
 jline.version=1.0
 joda-time.version=2.5
 jopt.version=4.1
